objects/ASI_CRM_Image_Level_Threshold__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Group_Outlet_Type__c</fullName>
        <label>Group Outlet Type</label>
        <referenceTo>ASI_CRM_Group_Outlet_Type__c</referenceTo>
        <relationshipLabel>Image Level Thresholds</relationshipLabel>
        <relationshipName>ASI_CRM_Image_Level_Thresholds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Image_Level_Id__c</fullName>
        <formula>ASI_CRM_SG_Image_Level__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Level Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Image_Level_Name__c</fullName>
        <formula>TEXT(ASI_CRM_SG_Image_Level__r.ASI_CRM_SG_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Level Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Image_Level__c</fullName>
        <label>Image Level</label>
        <referenceTo>ASI_CRM_Image_Level__c</referenceTo>
        <relationshipLabel>Image Level Thresholds</relationshipLabel>
        <relationshipName>ASI_Image_Level_Thresholds</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Min_Weight__c</fullName>
        <label>Minimum Weight</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Score__c</fullName>
        <label>Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Image Level Threshold</label>
    <listViews>
        <fullName>ASI_CRM_MY_All_Image_Level_Thresholds</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type__c</columns>
        <columns>ASI_CRM_SG_Image_Level__c</columns>
        <columns>ASI_CRM_Score__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Image_Level_Threshold__c.ASI_CRM_MY_Image_Level_Threshold</value>
        </filters>
        <label>All MY Image Level Thresholds</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Image_Level_Name__c</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type__c</columns>
        <columns>ASI_CRM_SG_Min_Weight__c</columns>
        <columns>ASI_CRM_SG_Image_Level__c</columns>
        <columns>ASI_CRM_SG_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ILT-{0000}</displayFormat>
        <label>Image Level Threshold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Image Level Thresholds</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_Image_Level_Threshold</fullName>
        <active>true</active>
        <label>ASI CRM MY Image Level Threshold</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Image_Level_Threshold</fullName>
        <active>true</active>
        <label>ASI CRM TH Image Level Threshold</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Image_Level_Threshold</fullName>
        <active>true</active>
        <label>ASI CRM TW Image Level Threshold</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Image_Level_Threshold</fullName>
        <active>true</active>
        <label>ASI CRM VN Image Level Threshold</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>